--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     </string>
 
     <string name="spm6">
-        Hvordan vurderer du mødelederens indsats idag?
+        Hvordan vurderer du \n mødelederens indsats idag?
     </string>
 
     <string name="fremskridt1">
