Lavet om på tab, genbruger samme layout på alle tabs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     </string>
 
     <string name="færdigBtn">
-        Afslut
+        Afslut feedback
     </string>
 
     <string name="deltagBtn">
