Implementering af Email funktion. -Tilføjet java klasse GMail -Tilføjet java klasse SendEmailTask -Opdateret LederOpretMøde aktivitet så den kan sende email

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,5 +79,13 @@
         Deltag
     </string>
 
+    <string name="emailText">
+        Dit møde er oprettet og du har følgende ID:
+    </string>
+
+    <string name="emailEmne">
+        Spin Off Møde ID
+    </string>
+
 
 </resources>
