--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,8 +39,8 @@
         Hvordan vurderer du din \n egen deltagelse?
     </string>
 
-    <string name="afsluttende">
-        Tak for dine svar har du \n yderlige kommentar ?
+    <string name="afslut">
+        Tak for dine svar har du \n yderelig kommentar ?
     </string>
 
 
